# SezimEmoLex

./: README.md  pyproject.toml
SezimEmoLex/: CITATION.cff  GITHUB_INSTRUCTIONS.md  LICENSE  pyproject.toml
SezimEmoLex/data/: LICENSE_DATA.md  sezim_emolex.csv
SezimEmoLex/examples/: quickstart.ipynb
SezimEmoLex/src/sezim_emolex/: lexicon.py
data/: sezim_emolex.csv
src/sezim_emolex/: __init__.py
tests/: test_sezim_emolex.py
