[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sezim-emolex"
version = "1.0.0"
authors = [
  { name="SezimEmoLex Contributors" },
]
description = "A Kazakh Sentiment & Emotion Lexicon with 8,557 words, 8 emotions, and sentiment polarity."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "pandas>=1.0",
]

[project.urls]
"Homepage" = "https://github.com/sezim-lexi/sezim-emolex"
"Repository" = "https://github.com/sezim-lexi/sezim-emolex"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"sezim_emolex" = ["../data/sezim_emolex.csv"]
